made FAQ and Happy Cliens sections

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
   </script>
 </head >
-<body class="font-poppins container mx-auto">
+<body class="font-poppins max-w-screen-xl mx-auto">
   <!-- Header Section -->
     <header class="w-11/12 mx-auto">
       <!-- Navbar -->
@@ -181,7 +181,7 @@
       <!-- Featured Bikes Sections -->
        <section class="my-20">
         <div class="text-center space-y-2">
-          <h2 class="text-5xl font-semibold">Featured Bikes In This Year</h2>
+          <h2 class="text-3xl sm:text-4xl font-semibold">Featured Bikes In This Year</h2>
           <p class="text-sm text-primary-color">Best bike collection</p>
           <hr class="border-primary-color w-16 mx-auto">
         </div>
@@ -196,7 +196,7 @@
 
       <!-- Latest News Card Section -->
        <section>
-          <h2 class="text-5xl font-semibold text-center mb-12">Latest News</h2>
+          <h2 class="text-3xl sm:text-4xl font-semibold text-center mb-12">Latest News</h2>
         <!-- Card Container -->
         <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-5 justify-center">
           <!-- Card 1 -->
@@ -247,6 +247,156 @@
 
         </div>
        </section>
+
+      <!-- Happy Clients Section -->
+       <section class="my-20">
+        <h2 class="text-3xl sm:text-4xl font-semibold text-center mb-12">Happy <span class="text-primary-color">Clients Says</span></h2>
+        <!-- Clients card container-->
+        <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-10">
+          <!-- Card 1 -->
+           <div class="flex flex-col items-center gap-4 p-8">
+            <div>
+              <img src="assets/images/user-1.png" alt="" class="rounded-full">
+            </div>
+            <p class="text-gray-700 text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <!-- Ratings -->
+            <!-- <div class="flex w-5 justify-center">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-regular.svg" alt="">
+            </div> -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            
+            <div>
+              <a class="font-semibold text-sm text-[#23A6F0] cursor-pointer">Andy Smith</a>
+            </div>
+            <p class="font-semibold text-sm text-[#252B42]">Writer</p>
+           </div>
+          <!-- Card 2 -->
+           <div class="flex flex-col items-center gap-4 p-8">
+            <div>
+              <img src="assets/images/user-2.png" alt="" class="rounded-full">
+            </div>
+            <p class="text-gray-700 text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <!-- Ratings -->
+            <!-- <div class="flex w-5 justify-center">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-half-stroke-solid.svg" alt="">
+              <img src="assets/icons/star-regular.svg" alt="">
+            </div> -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <div>
+              <a class="font-semibold text-sm text-[#23A6F0] cursor-pointer">Regina Miles</a>
+            </div>
+            <p class="font-semibold text-sm text-[#252B42]">Banker</p>
+           </div>
+          <!-- Card 3 -->
+           <div class="flex flex-col items-center gap-4 p-8">
+            <div>
+              <img src="assets/images/user-3.png" alt="" class="rounded-full">
+            </div>
+            <p class="text-gray-700 text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <!-- Ratings -->
+            <!-- <div class="flex w-5 justify-center">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-solid.svg" alt="">
+              <img src="assets/icons/star-regular.svg" alt="">
+            </div> -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <div>
+              <a class="font-semibold text-sm text-[#23A6F0] cursor-pointer">Regina Miles</a>
+            </div>
+            <p class="font-semibold text-sm text-[#252B42]">Banker</p>
+           </div>
+        </div>
+       </section>
+
+      <!-- FAQ section -->
+       <section>
+        <h2 class="text-3xl sm:text-4xl font-semibold text-center mb-12">Frequently <span class="text-primary-color">Asked Questions</span></h2>
+        <!-- Hero style -->
+        <div class="hero">
+          <div class="hero-content flex-col md:flex-row gap-16">
+            <!-- Image content -->
+              <img
+              src="assets/images/faq.png"
+              class="rounded-lg" />
+            
+            <!-- FAQ Text content -->
+            <div class="join join-vertical space-y-4">
+              <div class="collapse collapse-arrow join-item border-gray-300 border">
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should
+                  know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow join-item border-gray-300 border">
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                  new one?</div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow join-item border-gray-300 border">
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow join-item border-gray-300 border">
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
      </main>
+
+    <!-- Footer Section -->
+
 </body>
 </html>
