--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
   </script>
 </head >
-<body class="font-poppins container mx-auto">
+<body class="font-poppins max-w-screen-xl mx-auto">
   <!-- Header Section -->
     <header class="w-11/12 md:w-4/5 mx-auto">
       <!-- Navbar -->
@@ -71,7 +71,7 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="text-3xl font-bold cursor-pointer">Biker Zone</a>
+            <a class="text-2xl sm:text-3xl font-bold cursor-pointer">Biker Zone</a>
           </div>
           <div class=" hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
